--- a/package.json
+++ b/package.json
@@ -1,15 +1,19 @@
 {
   "name": "mern-todo-ts",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/server.ts",
+    "server": "nodemon src/server.ts",
+    "dev": "concurrently \"npm run server\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@vercel/node": "^3.2.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "concurrently": "^8.2.2",
@@ -22,7 +26,10 @@
     "mongoose": "^8.5.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.10",
     "nodemon": "^3.1.4",
     "ts-node-dev": "^2.0.0",
